Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-58049

Dragging a dockwidget from a floating group doesn't hide the rubber band

    XMLWordPrintable

Details

    • dd2a871eaefe8925c88a835bf298180044d4b0e9

    Description

      Have a floating group window with tabs, drag one tab away from the floating group window, you'll notice it's still highlighted.

      Attachments

        For Gerrit Dashboard: QTBUG-58049
        # Subject Branch Project Status CR V

        Activity

          People

            iamsergio Sergio Martins
            iamsergio Sergio Martins
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes