Clear dock indicator when not over a floating dock group window

The rubberband is shown depending if there's a current hovered dock widget,
but there were a few places that were not calling updateGapIndicator().

Additionally, the rubberband will also disappear if the currentHoveredFloat
is destroyed externally (would leave a ghost rubber band behind).

Task-number: QTBUG-58049
Change-Id: Iafdf234aa04b0ee280e51f8fa2fd212c86610cd1
Reviewed-by: Olivier Goffart (Woboq GmbH) <ogoffart@woboq.com>
(cherry picked from commit dd2a871eaefe8925c88a835bf298180044d4b0e9)